k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fam-backend
spec:
  selector:
    app: fam-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
